5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1621_2924.log
== TEST (2019-04-01 19:12:07) 
-- CODE:
X = float(input("posicao inicial: "))
y = float(input("velocidade: "))
z = float(input("intervalo de tempo: "))

S = X + Y*Z

print(S)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = X + Y*Z
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:12:34) 
-- CODE:
X = float(input("posicao inicial: "))
y = float(input("velocidade: "))
z = float(input("intervalo de tempo: "))

S = X + y*Z

print(S)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = X + y*Z
NameError: name 'Z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:12:46) 
-- CODE:
X = float(input("posicao inicial: "))
y = float(input("velocidade: "))
z = float(input("intervalo de tempo: "))

S = X + y*z

print(S)

-- OUTPUT:
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:13:19) 
-- CODE:
X = int(input("posicao inicial: "))
y = int(input("velocidade: "))
z = int(input("intervalo de tempo: "))

S = X + y*z

print(S)

-- OUTPUT:
3002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:13:27) 
-- CODE:
X = int(input("posicao inicial: "))
y = int(input("velocidade: "))
z = int(input("intervalo de tempo: "))

S = X + y*z

print(S)

-- EXECUTION TIME:
0.145474
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
3002
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
4252
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
3058
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:18:36) 
-- CODE:
from math import *

h = float(input(" haltura: "))

g = 9,81

v = sqrt(2*g*h)

print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    v = sqrt(2*g*h)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
